--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   intl: ^0.17.0
   go_router: ^7.0.0
   charts_flutter: ^0.12.0
+  flutter_colorpicker: ^1.1.0
   
 
 dev_dependencies:
